Fix z-index

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  z-index: 15;
+  z-index: 20;
   position: fixed;
   padding: 1.5rem 0;
   top: 0;
