--- a/styles/Socials.module.css
+++ b/styles/Socials.module.css
@@ -3,7 +3,7 @@
   position: fixed;
   left: 1rem;
   bottom: 1rem;
-  z-index: 10;
+  z-index: 15;
 }
 
 .wrapper {
